Add initial camelCase emission support
Signed-off-by: Jean Bruant <jean.bruant@ovhcloud.com>

--- a/src/main/resources/project/config.yml
+++ b/src/main/resources/project/config.yml
@@ -16,6 +16,7 @@
     RemoveConcats:
       useChiselCat: true
     Chiselizer:
+      toCamelCase: false
       unpackedEmissionStyle: Reg # Reg|Mem|SyncReadMem
       topLevelChiselGenerators: # list of top in the project 
         - name: my_module # name of top
