--- a/src/main/resources/project/config.yml
+++ b/src/main/resources/project/config.yml
@@ -17,6 +17,7 @@
       useChiselCat: true
     Chiselizer:
       toCamelCase: false
+      ignoreEnumFieldScalastyle: false
       unpackedEmissionStyle: Reg # Reg|Mem|SyncReadMem
       topLevelChiselGenerators: # list of top in the project 
         - name: my_module # name of top
